# WHAM

./: .gitignore  README.md  demo.py  demo_pose_npz.py  fetch_demo_data.sh  pyproject.toml  requirements.txt  run.py  wham_api.py
configs/: __init__.py
configs/yamls/: demo.yaml
lib/: __init__.py
lib/core/: __init__.py
lib/data/datasets/: __init__.py
lib/data/utils/: normalizer.py
lib/models/: __init__.py  smpl.py
lib/models/layers/: __init__.py
lib/models/preproc/: __init__.py  detector.py  extractor.py
lib/models/preproc/backbone/: __init__.py
lib/utils/: __init__.py
lib/vis/: __init__.py
wham/: __init__.py  api.py  cli.py  inference.py  pipeline.py  pose_data.py  slam.py  visualize.py
