[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wham-reconstructed"
version = "0.1.0"
description = "WHAM: world-grounded human motion reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "WHAM contributors" }]
dependencies = [
  "numpy",
  "numba",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "yacs",
  "joblib",
  "scikit-image",
  "opencv-python",
  "imageio[ffmpeg]",
  "matplotlib",
  "smplx",
  "progress",
  "einops",
  "timm",
  "loguru",
  "tqdm",
  "ultralytics",
]

[project.optional-dependencies]
slam = ["evo", "pypose", "kornia", "plyfile"]
train = ["tensorboard", "mmcv==2.1.0", "munkres", "xtcocotools", "torch_scatter"]

[project.scripts]
wham-demo = "demo:main"
wham-demo-pose-npz = "demo_pose_npz:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wham*", "lib*", "configs*"]

[tool.setuptools.package-data]
configs = ["yamls/*.yaml"]
