[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wham"
version = "0.1.0"
description = "WHAM: world-grounded human motion reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "WHAM contributors" }]
dependencies = [
  "numpy<=2.3.5",
  "numba",
  "torch<=2.5.1",
  "torchvision<=0.20.1",
  "yacs",
  "joblib",
  "chumpy",
  "scikit-image",
  "opencv-python",
  "imageio[ffmpeg]",
  "matplotlib",
  "smplx",
  "progress",
  "einops",
  "timm",
  "loguru",
  "tqdm",
  "evo",
  "pypose",
  "kornia",
  "plyfile",
  "torch_scatter",
  "tensorboard", 
  "mmcv==2.1.0",
  "munkres", 
  "setuptools<81",
]

[project.scripts]
wham = "wham.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wham*", "lib*", "configs*"]

[tool.setuptools.package-data]
configs = ["yamls/*.yaml"]
